<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editorlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_figure" />

        <Button
            android:id="@+id/btn_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_table" />

        <Button
            android:id="@+id/btn_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_symbol" />

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_curlyleft" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_curlyright" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_dollar" />

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_backslash" >
        </Button>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_squareleft" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_squareright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <EditText
            android:id="@+id/txt_searchbox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_search"
            android:imeOptions="actionSearch" />

        <EditText
            android:id="@+id/txt_replace"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_replace" />

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prev" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next" />

        <Button
            android:id="@+id/btn_replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_replace" />

        <Button
            android:id="@+id/btn_replaceall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_replaceall" />
    </LinearLayout>

    <EditText
        android:id="@+id/editor"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</LinearLayout>