<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txt_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_filename" >
        </EditText>

        <CheckBox
            android:id="@+id/chk_Inflation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_inflation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txt_percent"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/chk_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"
                android:text="@string/chk_width" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chk_center" />

        <CheckBox
            android:id="@+id/chk_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chk_insert" />

        <EditText
            android:id="@+id/txt_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_caption" />

        <EditText
            android:id="@+id/txt_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_label" />

        <Button
            android:id="@+id/btn_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_position" />

        <Spinner
            android:id="@+id/spn_expansion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Expansion"
            android:prompt="@string/spn_expansion" />

        <Button
            android:id="@+id/btn_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_insert" />
    </LinearLayout>

</ScrollView>