<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_Password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/txt_ipaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_ipaddress" />

    <EditText
        android:id="@+id/txt_portno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_portno"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_generate" />

    <Button
        android:id="@+id/btn_viewpdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewPDF"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_viewlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewlog"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>