<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_drawpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txt_result"
        android:gravity="center"
        android:text="@string/lbl_draw"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_insert"
        android:hint="@string/txt_result" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_insert" />

</RelativeLayout>