<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="3dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/upDirectoryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/dir_up"
            android:text="@string/btn_up" />

        <Button
            android:id="@+id/selectCurrentDirectoryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_current" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentDirectoryTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_longcontent" />

    <ListView
        android:id="@+id/fileListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:layout_weight="1" />

</LinearLayout>